/cp 2011-10-17  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/48489
	* typeck.c (finish_class_member_access_expr): Fix error call
	for TREE_CODE (access_path) == TREE_BINFO.

/testsuite
2011-10-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/48489
	* g++.dg/inherit/error5.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@180080 138bc75d-0d04-0410-961f-82ee72b054a4